# crewai-examples

./: .gitignore  README.md  crewai_flow.html  pyproject.toml
src/sales_pipeline/: main.py
src/sales_pipeline/crews/email_writing/: README.md  pyproject.toml
src/sales_pipeline/crews/email_writing/src/email_writing/: crew.py  main.py
src/sales_pipeline/crews/email_writing/src/email_writing/config/: email_engagement_tasks.yaml
src/sales_pipeline/crews/lead_enrichment/: README.md  pyproject.toml
src/sales_pipeline/crews/lead_enrichment/src/lead_enrichment/: crew.py  main.py
src/sales_pipeline/crews/lead_enrichment/src/lead_enrichment/config/: lead_qualification_tasks.yaml
